<resources>
    <string name="app_name">CurrencyCompare</string>
    <string name="codingmart">CODINGMART</string>
    <string name="android_interview_currency_compare">Android Interview - currency compare</string>
    <string name="next">Next</string>
    <string name="select_your_base">Select your base</string>
    <string name="currency_code_inr_usd_eur">Currency code (INR, USD, EUR,..)</string>
    <string name="enter_currency">Enter currency</string>
    <string name="base_currency">Base Currency :</string>
    <string name="currencies_to_compare">Currencies to compare</string>
    <string name="refresh">Refresh</string>
    <string name="edit_base_currency">Edit Base Currency</string>
    <string name="today_s_value">Today\'s value</string>
    <string name="base_currency_value">%s Value : 1 %s</string>
    <string name="result">%s Value : %s</string>
    <string name="edit_target_currency">Edit Target Currency</string>
    <string name="logout">Logout</string>
</resources>